Customize home articles and add branded hero slides

--- a/index.html
+++ b/index.html
@@ -57,20 +57,34 @@
           <div class="home-banner-slider">
             <div id="homeBannerTrack" class="home-banner-track">
               <div class="featured-promo banner-slide banner-slide-promo">
-                <div class="featured-chip">Только для новых клиентов</div>
-                <div class="featured-title">-10% на первый заказ</div>
-                <div class="featured-text">Введите промокод <strong>"ПЕРВЫЙ"</strong> и получите скидку на товары без акций.</div>
-                <div class="featured-cta">Активировать в корзине</div>
+                <div class="featured-chip">Запуск продаж за 1-3 дня</div>
+                <div class="featured-title">DEMOKATALOG</div>
+                <div class="featured-text">Готовый mini app + бот для интернет-магазина в Telegram с корзиной и оформлением.</div>
+                <div class="featured-cta">Запустить проект</div>
               </div>
               <div class="featured-promo info-hero banner-slide banner-slide-about">
-                <div class="featured-chip">О компании</div>
-                <div class="featured-title">Демо каталог</div>
-                <div id="homeAboutText" class="featured-text">Современный mini app для интернет‑магазинов и офлайн точек продаж.</div>
+                <div class="featured-chip">О продукте</div>
+                <div class="featured-title">Продажи в Telegram</div>
+                <div id="homeAboutText" class="featured-text">Современный mini app для интернет-магазинов и офлайн точек продаж.</div>
+              </div>
+              <div class="featured-promo banner-slide">
+                <div class="featured-chip">Увеличение конверсии</div>
+                <div class="featured-title">Каталог + корзина + оплата</div>
+                <div class="featured-text">Клиент проходит путь от выбора товара до заказа в одном интерфейсе без переходов на сторонние сайты.</div>
+                <div class="featured-cta">Смотреть функционал</div>
+              </div>
+              <div class="featured-promo banner-slide">
+                <div class="featured-chip">Под твой бренд</div>
+                <div class="featured-title">Дизайн и логика под нишу</div>
+                <div class="featured-text">Адаптируем витрину, категории, тексты, промо и сценарии оплаты под твой бизнес и аудиторию.</div>
+                <div class="featured-cta">Обсудить запуск</div>
               </div>
             </div>
             <div id="homeBannerDots" class="home-banner-dots">
               <button class="dot active" data-home-banner-dot="0" type="button" aria-label="Баннер 1"></button>
               <button class="dot" data-home-banner-dot="1" type="button" aria-label="Баннер 2"></button>
+              <button class="dot" data-home-banner-dot="2" type="button" aria-label="Баннер 3"></button>
+              <button class="dot" data-home-banner-dot="3" type="button" aria-label="Баннер 4"></button>
             </div>
           </div>
         </section>
@@ -78,20 +92,20 @@
         <div class="home-section-title">Статьи и разделы</div>
         <div class="home-info-grid">
           <button class="text-card home-info-card" data-screen="about" type="button">
-            <strong>О компании</strong>
-            <span>Кто мы, чем занимаемся и какие задачи решаем для бизнеса.</span>
+            <strong>Что такое DEMOKATALOG</strong>
+            <span>Готовый продукт для запуска продаж в Telegram: быстро, современно и масштабируемо.</span>
           </button>
           <button class="text-card home-info-card" data-screen="production" type="button">
-            <strong>Механика mini app</strong>
-            <span>Как работает каталог, корзина, оформление заказа и оплата.</span>
+            <strong>Механика продаж</strong>
+            <span>Как клиент проходит путь: каталог, карточка товара, корзина, оформление и оплата.</span>
           </button>
           <button class="text-card home-info-card" data-screen="payment" type="button">
-            <strong>Оплата и условия</strong>
-            <span>Поддержка касс, Telegram Payments и форматы доставки.</span>
+            <strong>Оплата и интеграции</strong>
+            <span>Подключение Telegram Payments, касс, промокодов и сбор данных клиента.</span>
           </button>
           <button class="text-card home-info-card" data-screen="contacts" type="button">
-            <strong>Контакты</strong>
-            <span>Связь с менеджером и быстрый переход в Telegram.</span>
+            <strong>Запуск под ключ</strong>
+            <span>Связь с менеджером, настройка под бренд и поэтапный запуск проекта.</span>
           </button>
         </div>
 
