--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover" />
     <title>Demo Catalog</title>
-    <link rel="stylesheet" href="style.css?v=20260224-11" />
+    <link rel="stylesheet" href="style.css?v=20260224-12" />
   </head>
   <body>
     <header class="header">
@@ -15,6 +15,7 @@
         </button>
         <div class="brand-logo-line">
           <span class="brand-name">DEMO STORE</span>
+          <span class="brand-build">build 12d8388</span>
         </div>
         <button id="headerSearchButton" class="header-search-button" type="button" aria-label="Поиск по товарам">
           <svg class="icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.1" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
@@ -503,7 +504,7 @@
     </nav>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="telegram.js?v=20260224-3"></script>
-    <script src="app.js?v=20260224-9"></script>
+    <script src="telegram.js?v=20260224-4"></script>
+    <script src="app.js?v=20260224-10"></script>
   </body>
 </html>
