--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover" />
     <title>Demo Catalog</title>
-    <link rel="stylesheet" href="style.css?v=20260224-12" />
+    <link rel="stylesheet" href="style.css?v=20260224-13" />
   </head>
   <body>
     <header class="header">
@@ -57,35 +57,22 @@
         <section class="home-feature-wrap">
           <div class="home-banner-slider">
             <div id="homeBannerTrack" class="home-banner-track">
-              <div class="featured-promo banner-slide banner-slide-promo">
-                <div class="featured-chip">Запуск продаж за 1-3 дня</div>
-                <div class="featured-title">DEMOKATALOG</div>
-                <div class="featured-text">Готовый mini app + бот для интернет-магазина в Telegram с корзиной и оформлением.</div>
-                <div class="featured-cta">Запустить проект</div>
+              <div class="featured-promo banner-slide banner-slide-clean banner-slide-promo">
+                <div class="featured-chip">Спецпредложение</div>
+                <div class="featured-title">Промокод ПЕРВЫЙ</div>
+                <div class="featured-text">Скидка <strong>10%</strong> на первый заказ для новых клиентов. Применяется в корзине автоматически после активации.</div>
+                <div class="featured-cta">Активировать в корзине</div>
               </div>
-              <div class="featured-promo info-hero banner-slide banner-slide-about">
-                <div class="featured-chip">О продукте</div>
-                <div class="featured-title">Продажи в Telegram</div>
-                <div id="homeAboutText" class="featured-text">Современный mini app для интернет-магазинов и офлайн точек продаж.</div>
-              </div>
-              <div class="featured-promo banner-slide">
-                <div class="featured-chip">Увеличение конверсии</div>
-                <div class="featured-title">Каталог + корзина + оплата</div>
-                <div class="featured-text">Клиент проходит путь от выбора товара до заказа в одном интерфейсе без переходов на сторонние сайты.</div>
-                <div class="featured-cta">Смотреть функционал</div>
-              </div>
-              <div class="featured-promo banner-slide">
-                <div class="featured-chip">Под твой бренд</div>
-                <div class="featured-title">Дизайн и логика под нишу</div>
-                <div class="featured-text">Адаптируем витрину, категории, тексты, промо и сценарии оплаты под твой бизнес и аудиторию.</div>
-                <div class="featured-cta">Обсудить запуск</div>
+              <div class="featured-promo banner-slide banner-slide-clean banner-slide-sales">
+                <div class="featured-chip">Продающий оффер</div>
+                <div class="featured-title">Каталог, корзина и оплата в Telegram</div>
+                <div id="homeAboutText" class="featured-text">Запусти продажи в mini app без сайта: клиент выбирает товар, оформляет заказ и оплачивает в одном окне.</div>
+                <div class="featured-cta">Запустить под ключ</div>
               </div>
             </div>
             <div id="homeBannerDots" class="home-banner-dots">
               <button class="dot active" data-home-banner-dot="0" type="button" aria-label="Баннер 1"></button>
               <button class="dot" data-home-banner-dot="1" type="button" aria-label="Баннер 2"></button>
-              <button class="dot" data-home-banner-dot="2" type="button" aria-label="Баннер 3"></button>
-              <button class="dot" data-home-banner-dot="3" type="button" aria-label="Баннер 4"></button>
             </div>
           </div>
         </section>
@@ -505,6 +492,6 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="telegram.js?v=20260224-4"></script>
-    <script src="app.js?v=20260224-10"></script>
+    <script src="app.js?v=20260224-11"></script>
   </body>
 </html>
