Refactor app structure and externalize home content for admin readiness

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover" />
     <title>Demo Catalog</title>
-    <link rel="stylesheet" href="style.css?v=20260224-19" />
+    <link rel="stylesheet" href="style.css?v=20260225-20" />
   </head>
   <body>
     <header class="header">
@@ -55,51 +55,14 @@
       <section id="screen-home" class="screen active">
         <section class="home-feature-wrap">
           <div class="home-banner-slider">
-            <div id="homeBannerTrack" class="home-banner-track">
-              <div class="featured-promo banner-slide banner-slide-clean banner-slide-promo">
-                <div class="featured-chip">Спецпредложение</div>
-                <div class="featured-title">Промокод ПЕРВЫЙ</div>
-                <div class="featured-text">Скидка <strong>10%</strong> на первый заказ для новых клиентов. Применяется в корзине автоматически после активации.</div>
-                <div class="featured-cta">Активировать в корзине</div>
-              </div>
-              <div class="featured-promo banner-slide banner-slide-clean banner-slide-sales">
-                <div class="featured-chip">Продающий оффер</div>
-                <div class="featured-title">Каталог, корзина и оплата в Telegram</div>
-                <div id="homeAboutText" class="featured-text">Запусти продажи в mini app без сайта: клиент выбирает товар, оформляет заказ и оплачивает в одном окне.</div>
-                <div class="featured-cta">Запустить под ключ</div>
-              </div>
-            </div>
-            <div id="homeBannerDots" class="home-banner-dots">
-              <button class="dot active" data-home-banner-dot="0" type="button" aria-label="Баннер 1"></button>
-              <button class="dot" data-home-banner-dot="1" type="button" aria-label="Баннер 2"></button>
-            </div>
+            <div id="homeBannerTrack" class="home-banner-track"></div>
+            <div id="homeBannerDots" class="home-banner-dots"></div>
           </div>
         </section>
 
         <div class="home-section-title">Статьи и разделы</div>
         <section class="home-article-slider">
-          <div class="home-article-track">
-            <button class="home-article-slide" data-screen="about" type="button">
-              <span class="home-article-kicker">О продукте</span>
-              <strong>Что такое DEMOKATALOG</strong>
-              <span>Готовый mini app для запуска продаж в Telegram за короткий срок.</span>
-            </button>
-            <button class="home-article-slide" data-screen="production" type="button">
-              <span class="home-article-kicker">Механика</span>
-              <strong>Как работает воронка</strong>
-              <span>Каталог, карточка, корзина, оформление, оплата и уведомления в боте.</span>
-            </button>
-            <button class="home-article-slide" data-screen="payment" type="button">
-              <span class="home-article-kicker">Оплата</span>
-              <strong>Кассы и интеграции</strong>
-              <span>Telegram Payments, провайдеры, промокоды, сбор контактов и Telegram ID.</span>
-            </button>
-            <button class="home-article-slide" data-screen="contacts" type="button">
-              <span class="home-article-kicker">Запуск</span>
-              <strong>Внедрение под ключ</strong>
-              <span>Настраиваем структуру, визуал и логику под твою нишу и бренд.</span>
-            </button>
-          </div>
+          <div id="homeArticleTrack" class="home-article-track"></div>
         </section>
 
         <div class="home-section-title">Акции</div>
@@ -497,6 +460,6 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="telegram.js?v=20260224-4"></script>
-    <script src="app.js?v=20260224-12"></script>
+    <script src="app.js?v=20260225-13"></script>
   </body>
 </html>
