--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover" />
     <title>Demo Catalog</title>
-    <link rel="stylesheet" href="style.css?v=20260226-03" />
+    <link rel="stylesheet" href="style.css?v=20260226-04" />
   </head>
   <body>
     <header class="header">
@@ -22,6 +22,10 @@
             <path d="m20 20-3.5-3.5" />
           </svg>
         </button>
+      </div>
+      <div id="adminHeaderActions" class="admin-header-actions hidden">
+        <button id="adminSaveDraftButton" class="admin-header-button" type="button">Сохранить</button>
+        <button id="adminPublishButton" class="admin-header-button admin-header-button-primary" type="button">Выгрузить в каталог</button>
       </div>
     </header>
 
@@ -466,6 +470,6 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="telegram.js?v=20260224-4"></script>
-    <script src="app.js?v=20260226-05"></script>
+    <script src="app.js?v=20260226-06"></script>
   </body>
 </html>
