Admin UX fixes: 4s hold, raised action sheet, category add visibility

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover" />
     <title>Demo Catalog</title>
-    <link rel="stylesheet" href="style.css?v=20260226-19" />
+    <link rel="stylesheet" href="style.css?v=20260226-20" />
   </head>
   <body>
     <header class="header">
@@ -16,6 +16,11 @@
         <div class="brand-logo-line" aria-hidden="true"></div>
       </div>
       <div id="adminHeaderActions" class="admin-header-actions hidden">
+        <button id="adminSelectToggleButton" class="admin-header-button" type="button">Выделить</button>
+        <button id="adminMoveUpButton" class="admin-header-button admin-header-arrow" type="button" aria-label="Вверх">↑</button>
+        <button id="adminMoveDownButton" class="admin-header-button admin-header-arrow" type="button" aria-label="Вниз">↓</button>
+        <button id="adminMoveLeftButton" class="admin-header-button admin-header-arrow" type="button" aria-label="Влево">←</button>
+        <button id="adminMoveRightButton" class="admin-header-button admin-header-arrow" type="button" aria-label="Вправо">→</button>
         <button id="adminSaveDraftButton" class="admin-header-button" type="button">Сохранить</button>
         <button id="adminPublishButton" class="admin-header-button admin-header-button-primary" type="button">Выгрузить в каталог</button>
       </div>
@@ -486,6 +491,6 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="telegram.js?v=20260224-4"></script>
-    <script src="app.js?v=20260226-19"></script>
+    <script src="app.js?v=20260226-20"></script>
   </body>
 </html>
