Fix home card scale, persist admin session, add profile storeId/logout

--- a/index.html
+++ b/index.html
@@ -346,6 +346,10 @@
             <small>По любым вопросам в Telegram</small>
           </span>
         </button>
+        <div id="adminProfilePanel" class="profile-admin-panel hidden">
+          <div class="profile-admin-store">Store ID: <strong id="adminStoreIdValue">—</strong></div>
+          <button id="adminLogoutButton" class="secondary-button profile-admin-logout" type="button">Выйти из админки</button>
+        </div>
         <div class="home-section-title">История заказов</div>
         <div id="ordersList" class="orders-list"></div>
       </section>
@@ -500,6 +504,6 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="telegram.js?v=20260224-4"></script>
-    <script src="app.js?v=20260226-26"></script>
+    <script src="app.js?v=20260227-28"></script>
   </body>
 </html>
