chore: checkpoint before saas quality audit

--- a/index.html
+++ b/index.html
@@ -348,6 +348,11 @@
         </button>
         <div id="adminProfilePanel" class="profile-admin-panel hidden">
           <div class="profile-admin-store">Store ID: <strong id="adminStoreIdValue">—</strong></div>
+          <div class="profile-admin-actions">
+            <button id="adminReloadStoresButton" class="secondary-button profile-admin-logout" type="button">Мои магазины</button>
+            <button id="adminCreateStoreButton" class="secondary-button profile-admin-logout" type="button">Создать магазин</button>
+            <button id="adminConnectBotButton" class="secondary-button profile-admin-logout" type="button">Подключить бота</button>
+          </div>
           <button id="adminLogoutButton" class="secondary-button profile-admin-logout" type="button">Выйти из админки</button>
         </div>
         <div class="home-section-title">История заказов</div>
